# go-hailo

./: .gitmodules  CLAUDE.md  Makefile  README.md  go.mod  go.sum
cmd/action_test/: main.go
cmd/activation_test/: main.go
cmd/debug_actions/: main.go
cmd/hailort/: commands_test.go  main.go
cmd/infer_test/: main.go
cmd/reset_test/: main.go
docs/: IOCTL_REFERENCE.md  applicability.md  cpp-design.md  current-code.md  inference-engine-tests.md
examples/person-detector/: main.go
integration/: benchmark_test.go  inference_integration_test.go
new/: Makefile  README.md  go.mod
new/docs/: DESIGN.md
new/src/cpp/: CMakeLists.txt  hailo_c_api.cpp  hailo_c_api.h  hailo_inference.cpp  hailo_inference.hpp
pkg/control/: actions.go  messages.go  protocol.go
pkg/device/: device.go  errors.go  network_group.go  network_group_test.go  scanner.go  scanner_test.go
pkg/driver/: constants.go  constants_test.go  device_test.go  errors.go  errors_test.go  ioctl.go  ioctl_test.go  packed.go  packed_test.go  types.go  types_test.go
pkg/hef/: checksum_test.go  header_test.go  parser.go  parser_test.go  real_hef_test.go  types.go
pkg/infer/: async.go  async_test.go  bindings.go  bindings_test.go  errors.go  model.go  model_test.go  session_test.go  types.go
pkg/stream/: buffer.go  buffer_test.go  builder.go  channel.go  channel_test.go  descriptor.go  vstream.go  vstream_test.go
plans/: example-person-detector.md  fix.md  inference-engine.md  new-fix.md  step-by-step-check-official.md
scripts/: add-submodules.sh  get-orig-repos.sh
testutil/: fakes.go  helpers.go
(+10 files in other folders)
